single request matching working!

--- a/src/app/templates/admin/overview.html
+++ b/src/app/templates/admin/overview.html
@@ -11,5 +11,6 @@
 <a class="button" href="{% url 'configure timeout' %}">Configure Timeout</a>
 <a class="button" href="{% url 'request allowance' %}">Request Allowance</a>
 <a class="button" href="{% url 'confirm clean' %}">Clean Data</a>
+<a class="button" href="{% url 'make matches' %}">Make Matches</a>
 
 {% endblock %}
