--- a/src/app/templates/contacts.html
+++ b/src/app/templates/contacts.html
@@ -1,6 +1,6 @@
 {% extends "default.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Contacts{% endblock %}
 
 {% block content %}
 
