--- a/src/app/templates/rate.html
+++ b/src/app/templates/rate.html
@@ -1,6 +1,6 @@
 {% extends "default.html" %}
 
-{% block title %}Rate Website{% endblock %}
+{% block title %}Rate us{% endblock %}
 
 {% block content %}
 {% load static %}
