--- a/src/app/templates/singleRequest.html
+++ b/src/app/templates/singleRequest.html
@@ -1,6 +1,6 @@
 {% extends "default.html" %}
 
-{% block title %}FAQs{% endblock %}
+{% block title %}Single Request{% endblock %}
 
 {% block content %}
 
