--- a/src/app/templates/status.html
+++ b/src/app/templates/status.html
@@ -1,6 +1,6 @@
 {% extends "default.html" %}
 
-{% block title %}FAQs{% endblock %}
+{% block title %}Status{% endblock %}
 
 {% block content %}
 {% load static %}
