--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -4,12 +4,11 @@
 
 {% block content %}
 
-<h1>
-    After making a request, what now?
-</h1>
+<h3>Purpose:</h3>
+<span>This website was developed to help students get in the class they want. </span>
 
+<h3>Rules:</h3>
 <span class="many-lines">
-    <br>
     <ol class="many-lines" >
         <li>
             You must confirm your request in (timeout).
