--- a/src/app/templates/admin/cleanConfirm.html
+++ b/src/app/templates/admin/cleanConfirm.html
@@ -5,6 +5,6 @@
 {% block content %}
 
 <h3>Are you sure you want to erase everything store about students, ucs, classes, etc?</h3>
-<a href="{% url 'clean data' %}" class="button">Yes</a>
+<a href="{% url 'clean data' %}" class="button">Confirm</a>
 
 {% endblock %}
