--- a/src/app/templates/registration/login.html
+++ b/src/app/templates/registration/login.html
@@ -4,11 +4,18 @@
 
 {% block content %}
 
-<h2>Log In</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="" type="submit">Log In</button>
-</form>
+<h3>Warning:</h3>
+<span>If you are a student you don't need to authenticate to make requests. Log-in is only for staff members.</span>
+
+<div class="center"> 
+    <div class="form-container">
+        <h2>Log In</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Log In</button>
+        </form>
+    </div>
+</div>
 
 {% endblock %}
