--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -28,4 +28,6 @@
     Possible status: Not concluded, Request concluded, Accepted request  
 </span>
 
+<h4><a class="button" href="/rate"> Rate us!</a></h4>
+
 {% endblock %}
