--- a/src/app/templates/admin/export.html
+++ b/src/app/templates/admin/export.html
@@ -11,7 +11,7 @@
         {{ form }}
     </div>
     <div>
-        <input type="submit" value="Submit">
+        <button type="submit">Export</button>
     </div>
 
 </form>
