--- a/src/app/templates/admin/confTimeout.html
+++ b/src/app/templates/admin/confTimeout.html
@@ -11,8 +11,8 @@
         {{ form }}
     </div>
     <div>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
     </div>
 
 </form>
