--- a/src/app/templates/rate.html
+++ b/src/app/templates/rate.html
@@ -15,7 +15,7 @@
         {{ form }}
     </div>
     <div>
-        <input type="submit" value="Submit">
+        <button type="submit" value="Submit">Submit</button>
     </div>
 
 </form>
