--- a/src/app/templates/request.html
+++ b/src/app/templates/request.html
@@ -20,8 +20,8 @@
         {{ form }}
     </div>
     <div>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
     </div>
 </form>
 
