--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -83,9 +83,12 @@
         <a class="button special" href="{% url 'make request' %}">Make a Request</a>
         <p class="small-text">
             Check the <a href="{% url 'About' %}">about</a> section for more details.
+            <br>
+            <a class="" href="{% url 'single request' %}">One-person Request</a>
         </p>
     </div>
     
+
 </div>
 
 
