--- a/src/app/templates/contacts.html
+++ b/src/app/templates/contacts.html
@@ -4,14 +4,20 @@
 
 {% block content %}
 
-Email:
-
+Email: swapclasses@fe.up.pt
+<br>
 Subject:
+<br>
 Having trouble getting link? [LINK FAIL]
+<br>
 Didn't receive an email to confirm your request? [NO EMAIL]
+<br>
 Have a suggestion? [SUGGESTION]
+<br>
 Want to undo an exchange if the request is still not deployed? [CANCEL]
+<br>
 Have a question related to the process? [PROCESS QUESTION]
+<br>
 For other matters: [OTHER] + insert title
 
 {% endblock %}
